<resources>
    <string name="app_name">My Application</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_now">Sign up now!</string>
    <string name="id">ID</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="emailorphonenumber">Email or Phone Number</string>
    <string name="register">REGISTER</string>
    <string name="location_tracking">LOCATION TRACKING</string>
    <string name="button">button</string>
    <string name="id1">ID</string>
    <string name="first_name1">First Name</string>
    <string name="last_name1">Last Name</string>
    <string name="password1">Password</string>
    <string name="confirm_password1">Confirm Password</string>
    <string name="email_or_phone_number1">Email or Phone Number</string>
    <string name="fire_department">FIRE DEPARTMENT</string>
    <string name="police_department">POLICE DEPARTMENT</string>
    <string name="ambulance_department">AMBULANCE DEPARTMENT</string>
    <string name="coast_guard_department">COAST GUARD DEPARTMENT</string>
    <string name="juan_dela_cruz">Juan Dela Cruz</string>
    <string name="juan_dela_cruz1">Juan Dela Cruz</string>
    <string name="_09123456789">09123456789</string>
    <string name="id_number_123123">ID Number: 123123</string>
    <string name="id_presented_philhealth">ID Presented: PhilHealth</string>
    <string name="user_number">User Number: 00001</string>
</resources>