<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="329dp"
        android:layout_height="226dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="41dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img3"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="212dp"
        android:layout_height="38dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/border"
        android:drawableEnd="@drawable/baseline_folder_24"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="text"
        android:letterSpacing="0.09"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:fontFamily="@font/oswald_light"
        android:textAlignment="textStart"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,MissingConstraints,SmallSp,TextContrastCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteY="268dp" />

    <EditText
        android:id="@+id/editTextText8"
        android:layout_width="212dp"
        android:layout_height="38dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:autofillHints="name"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="@font/oswald_light"
        android:hint="@string/firstname"
        android:inputType="text"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textAlignment="textStart"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteY="327dp" />

    <EditText
        android:id="@+id/editTextText9"
        android:layout_width="212dp"
        android:layout_height="38dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:autofillHints="name"
        android:background="@drawable/border"
        android:fontFamily="@font/oswald_light"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="text"
        android:letterSpacing="0.09"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textAlignment="textStart"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck"
        tools:layout_editor_absoluteY="388dp" />

    <EditText
        android:id="@+id/editTextText10"
        android:layout_width="212dp"
        android:layout_height="38dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:letterSpacing="0.09"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textAlignment="textStart"
        android:fontFamily="@font/oswald_light"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,MissingConstraints,TextContrastCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteY="449dp" />

    <EditText
        android:id="@+id/editTextText12"
        android:layout_width="212dp"
        android:layout_height="38dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="101dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="@font/oswald_light"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword"
        android:letterSpacing="0.09"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textAlignment="textStart"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,MissingConstraints,TouchTargetSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck"
        tools:layout_editor_absoluteY="511dp" />

    <EditText
        android:id="@+id/editTextText13"
        android:layout_width="212dp"
        android:layout_height="38dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/emailorphonenumber"
        android:inputType="text"
        android:fontFamily="@font/oswald_light"
        android:letterSpacing="0.09"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textAlignment="textStart"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteY="572dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="212dp"
        android:layout_height="38dp"
        android:layout_marginStart="151dp"
        android:layout_marginEnd="172dp"
        android:background="@drawable/red_border"
        android:hint="@string/register"
        android:letterSpacing="0.4"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/oswald"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck"
        tools:layout_editor_absoluteY="652dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:text="@string/id1"
        android:textSize="15sp"
        android:fontFamily="@font/oswald"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextText7"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:text="@string/first_name1"
        android:fontFamily="@font/oswald"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextText8"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:text="@string/last_name1"
        android:fontFamily="@font/oswald"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextText9"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:text="@string/password1"
        android:fontFamily="@font/oswald"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextText10"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:text="@string/confirm_password1"
        android:fontFamily="@font/oswald"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextText12"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:fontFamily="@font/oswald"
        android:textSize="15sp"
        android:text="@string/email_or_phone_number1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextText13"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>