<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/user1"
        android:layout_width="205dp"
        android:layout_height="43dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="99dp"
        android:autofillHints="name"
        android:background="@drawable/border"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/oswald"
        android:hint="Username"
        android:inputType="text"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="HardcodedText,TextContrastCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/pw1"
        android:layout_width="205dp"
        android:layout_height="43dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="97dp"
        android:autofillHints="password"
        android:background="@drawable/border"
        android:drawableStart="@drawable/baseline_lock_24"
        android:ems="0"
        android:hint="Password"
        android:drawablePadding="10dp"
        android:fontFamily="@font/oswald"
        android:inputType="text"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user1"
        tools:ignore="HardcodedText,TextContrastCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="389dp"
        android:layout_height="282dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img3"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/button"
        android:layout_width="204dp"
        android:layout_height="41dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="159dp"
        android:background="@drawable/red_border"
        android:hint="@string/login"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pw1"
        tools:ignore="HardcodedText,TouchTargetSizeCheck,TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/donthaveaccount"
        android:layout_width="161dp"
        android:layout_height="22dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="101dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="96dp"
        android:text="@string/sign_up_now"
        android:contextClickable="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />


</androidx.constraintlayout.widget.ConstraintLayout>